removed TS in aplication

--- a/web/src/components/FormModal/styles.css
+++ b/web/src/components/FormModal/styles.css
@@ -40,6 +40,11 @@
     margin-top: 1.2rem;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    
+}
+#modal form .field:nth-child(1){
+    align-items: center;
 }
 
 
