--- a/web/src/components/IdeaBlock/styles.css
+++ b/web/src/components/IdeaBlock/styles.css
@@ -2,13 +2,13 @@
 .idea {
     width: 100%;
     display: flex;
-    flex-direction: column;
+    
     background-color: white;
     border-radius: 1rem;
     padding: 15px;
     background-color: white;
     margin: 2.4rem auto;
-    align-items: center;
+    align-items: left;
 }
 
 .idea img {
